# Mastering-Object-Oriented-Programming-Building-a-Robust-Movie-Database-System-in-CPP

./: .gitignore  AHMOD.docx  BEAUTIFUL_OUTPUT_GUIDE.txt  BUILD_INSTRUCTIONS.txt  CASE_INSENSITIVE_SEARCH_GUIDE.txt  CMakeLists.txt  COMMENTS_UPDATED.txt  CONCLUSION.md  CONTRIBUTING.md  DATABASE_EXPANDED_50_MOVIES.txt  DATA_PERSISTENCE_GUIDE.txt  DISPLAY_STYLE_FIXED.txt  FILE_INDEX.txt  FORMATTING_FIXES.txt  First Two Page.docx  IMPROVEMENTS_SUMMARY.txt  INTERACTIVE_FEATURES.txt  LANGUAGE_QUICK_REFERENCE.txt  LANGUAGE_SEARCH_FIXED.txt  LICENSE  Movie.cpp  Movie.h  MovieDatabase.cpp  MovieDatabase.h  MovieDisplay.h  PRESENTATION_GUIDE.md  PROJECT_DOCUMENTATION.txt  PROJECT_SUMMARY.txt  QUICK_50_MOVIES.txt  QUICK_REFERENCE.txt  QUICK_REFERENCE_10_POINT.txt  QUICK_START_INTERACTIVE.txt  RATING_SYSTEM_10_POINT.txt  README.md  VISUAL_COMPARISON.txt  VISUAL_DIAGRAMS.txt  compile_and_run.bat  main.cpp  movies.txt  ~$AHMOD.docx
